# bbmx

./: .gitmodules  API.md  CMakeLists.txt  README.md
include/: bbmx.h  bbmx_lapi.h  bbmx_lapi_interface.h  config.h  globals.h  utils.h
include/bbmxs/: bbmxs.h  models.h  serial.h
models/: LM108.json
src/: bbmx.c  bbmx_lapi.c  globals.c  main.c  utils.c
src/bbmxs/: bbmxs.c  serial.c
